<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primaryLight"
    tools:context="com.fkulic.guideme.ui.activities.MainActivity">

    <TextView
        android:id="@+id/tvHi"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/hi"
        android:textColor="@color/mainTvHi"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDenyAction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"/>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/tv_confirm_location"
        android:textColor="@color/mainTvConfirmLoc"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHi"/>

    <TextView
        android:id="@+id/tvLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="36dp"
        android:layout_marginRight="36dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:lines="3"
        android:textColor="@color/mainTvLocation"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMessage"/>

    <Button
        android:id="@+id/bAction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_transparent_border"
        android:padding="16dp"
        android:text="@string/b_confirm_location"
        android:textColor="@color/mainButtonConfirmLoc"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/tvDenyAction"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvLocation"
        app:layout_constraintVertical_bias="0.2"/>

    <TextView
        android:id="@+id/tvDenyAction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:gravity="center"
        android:text="@string/not_there"
        android:textColor="@color/mainTvNotThere"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</android.support.constraint.ConstraintLayout>
