<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.fkulic.guideme.ui.activities.NewLandmarkActivity"
    tools:showIn="@layout/activity_new_landmark">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:padding="@dimen/body_padding">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLandmarkName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:paddingLeft="0dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/image"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibCamera"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="@+id/ibCamera"
            app:layout_constraintTop_toTopOf="@+id/ibCamera"/>

        <ImageView
            android:id="@+id/ivNewLandmarkPhoto"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginRight="16dp"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="@+id/ibCamera"
            app:layout_constraintRight_toLeftOf="@+id/ibFromGallery"
            app:layout_constraintTop_toTopOf="@+id/ibCamera"/>

        <ImageButton
            android:id="@+id/ibFromGallery"
            style="@style/ImageButtonPrimaryStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:src="@drawable/ic_gallery"
            app:layout_constraintBottom_toBottomOf="@+id/ibCamera"
            app:layout_constraintRight_toLeftOf="@+id/ibCamera"
            app:layout_constraintTop_toTopOf="@+id/ibCamera"/>

        <ImageButton
            android:id="@+id/ibCamera"
            style="@style/ImageButtonPrimaryStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginTop="@dimen/new_landmark_vertical_spacing"
            android:src="@drawable/ic_camera"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiName"/>

        <TextView
            android:id="@+id/tvSetLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/set_location"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibSetLocation"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ibSetLocation"/>

        <ImageButton
            android:id="@+id/ibSetLocation"
            style="@style/ImageButtonPrimaryStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginTop="@dimen/new_landmark_vertical_spacing"
            android:src="@drawable/icon"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivNewLandmarkPhoto"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/tiDescription"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_landmark_vertical_spacing"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibSetLocation">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/etLandmarkDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minLines="4"
                android:paddingLeft="0dp"/>
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:id="@+id/tvAudioFilesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/audio_files"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ibNewAudioFile"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ibNewAudioFile"
            />

        <ImageButton
            android:id="@+id/ibNewAudioFile"
            style="@style/ImageButtonPrimaryStyle"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:layout_marginTop="@dimen/new_landmark_vertical_spacing"
            android:src="@drawable/ic_add"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tiDescription"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvNewLandmarkAudio"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ibNewAudioFile"/>

    </android.support.constraint.ConstraintLayout>

</android.support.v4.widget.NestedScrollView>